--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
 
 # Fortran module files
 *.mod
@@ -20,9 +19,18 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
+
+# Visual Studio files
+*.sdf
+*.opensdf
+*.suo
+
+# Lumina-Specific Ignores
+build/*
+*.bat
+src/Debug/*
