Added rudimentary support for lighting, render textures, and post processing, as well as cleaned up some of the older code. Will work on making lighting easier to use and more generic

--- a/src/LuminaGL.vcxproj.filters
+++ b/src/LuminaGL.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="Shaders">
       <UniqueIdentifier>{1e34761b-bd99-42f0-8826-b566276d2850}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shaders\PostProcess">
+      <UniqueIdentifier>{d524be29-3df7-498a-90a5-f0adce1ce3ed}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -90,7 +93,16 @@
     <ClCompile Include="Graphics\Transform.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="Graphics\CameraSingletonDSA.cpp">
+    <ClCompile Include="Graphics\RenderTexture.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\Texture2D.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\PostProcess.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\Light.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
@@ -137,9 +149,6 @@
     <ClInclude Include="Graphics\Graphics.hpp">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="Utility\FileSystem.hpp">
-      <Filter>Header Files\Utility</Filter>
-    </ClInclude>
     <ClInclude Include="Utility\Timer.hpp">
       <Filter>Header Files\Utility</Filter>
     </ClInclude>
@@ -161,7 +170,22 @@
     <ClInclude Include="Graphics\Transform.hpp">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="Graphics\CameraSingletonDSA.hpp">
+    <ClInclude Include="Graphics\RenderTexture.hpp">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Texture2D.hpp">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\FileSystem.hpp">
+      <Filter>Header Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\stb_image.h">
+      <Filter>Header Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\PostProcess.hpp">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Light.hpp">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
@@ -170,6 +194,36 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="..\content\Shaders\default.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\PostProcess\DrawToScreen.frag">
+      <Filter>Shaders\PostProcess</Filter>
+    </None>
+    <None Include="..\content\Shaders\PostProcess\Vertex.vert">
+      <Filter>Shaders\PostProcess</Filter>
+    </None>
+    <None Include="..\content\Shaders\textured.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\textured.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\directionalLight.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\directionalLight.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\pointLight.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\pointLight.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\spotLight.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\spotLight.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
