--- a/src/LuminaGL.vcxproj
+++ b/src/LuminaGL.vcxproj
@@ -102,6 +102,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Car.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
     <ClCompile Include="Graphics\Data.cpp" />
@@ -126,6 +127,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Car.h" />
     <ClInclude Include="Config.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="Graphics\Camera.hpp" />
@@ -158,10 +160,13 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     <None Include="..\content\Shaders\default.frag" />
     <None Include="..\content\Shaders\default.vert" />
     <None Include="..\content\Shaders\directionalLight.frag" />
+    <None Include="..\content\Shaders\directionalLight.vert" />
     <None Include="..\content\Shaders\pointLight.frag" />
+    <None Include="..\content\Shaders\pointLight.vert" />
     <None Include="..\content\Shaders\PostProcess\DrawToScreen.frag" />
     <None Include="..\content\Shaders\PostProcess\Vertex.vert" />
     <None Include="..\content\Shaders\spotLight.frag" />
+    <None Include="..\content\Shaders\spotLight.vert" />
     <None Include="..\content\Shaders\textured.frag" />
     <None Include="..\content\Shaders\textured.vert" />
   </ItemGroup>
