--- a/src/LuminaGL.vcxproj.filters
+++ b/src/LuminaGL.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="Graphics\Light.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
+    <ClCompile Include="Car.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.hpp">
@@ -188,6 +191,9 @@
     <ClInclude Include="Graphics\Light.hpp">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="Car.h">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\content\Shaders\default.frag">
@@ -211,10 +217,19 @@
     <None Include="..\content\Shaders\directionalLight.frag">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\content\Shaders\directionalLight.vert">
+      <Filter>Shaders</Filter>
+    </None>
     <None Include="..\content\Shaders\pointLight.frag">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\content\Shaders\pointLight.vert">
+      <Filter>Shaders</Filter>
+    </None>
     <None Include="..\content\Shaders\spotLight.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\content\Shaders\spotLight.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
