--- a/src/LuminaGL.vcxproj.filters
+++ b/src/LuminaGL.vcxproj.filters
@@ -232,5 +232,8 @@
     <None Include="..\content\Shaders\spotLight.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\content\Shaders\boundingBox.frag">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
