Added Collectibles to scene and am trying to get the collectible to delete on collision

--- a/src/LuminaGL.vcxproj
+++ b/src/LuminaGL.vcxproj
@@ -103,6 +103,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
+    <ClCompile Include="Collectible.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
     <ClCompile Include="Graphics\Data.cpp" />
