Adding 'LuminaBehaviour's, which function similar to Unity's MonoBehaviour. Not fulling integrated but getting it up there so we have it.

--- a/src/LuminaGL.vcxproj.filters
+++ b/src/LuminaGL.vcxproj.filters
@@ -135,6 +135,12 @@
     <ClCompile Include="Physics\Rigidbody.cpp">
       <Filter>Source Files\Physics</Filter>
     </ClCompile>
+    <ClCompile Include="Utility\Murmur3\MurmurHash.cpp">
+      <Filter>Source Files\Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\LuminaBehaviour.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.hpp">
@@ -244,6 +250,12 @@
     </ClInclude>
     <ClInclude Include="Physics\ContactContainer.hpp">
       <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\Murmur3\MurmurHash.h">
+      <Filter>Header Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\LuminaBehaviour.hpp">
+      <Filter>Header Files\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
