--- a/src/LuminaGL.vcxproj
+++ b/src/LuminaGL.vcxproj
@@ -106,6 +106,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     <ClCompile Include="Collectible.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
+    <ClCompile Include="Graphics\LuminaBehaviour.cpp" />
     <ClCompile Include="Graphics\Data.cpp" />
     <ClCompile Include="Graphics\GameObject.cpp" />
     <ClCompile Include="Graphics\Light.cpp" />
@@ -130,6 +131,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     <ClCompile Include="TestScene.cpp" />
     <ClCompile Include="Utility\FileSystem.cpp" />
     <ClCompile Include="Utility\Input.cpp" />
+    <ClCompile Include="Utility\Murmur3\MurmurHash.cpp" />
     <ClCompile Include="Utility\Timer.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -139,6 +141,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     <ClInclude Include="Config.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="Graphics\Camera.hpp" />
+    <ClInclude Include="Graphics\LuminaBehaviour.hpp" />
     <ClInclude Include="Graphics\Data.hpp" />
     <ClInclude Include="Graphics\GameObject.hpp" />
     <ClInclude Include="Graphics\Graphics.hpp" />
@@ -167,6 +170,7 @@ xcopy "$(SolutionDir)bin\*" "$(OutDir)" /s /y</Command>
     <ClInclude Include="TestScene.hpp" />
     <ClInclude Include="Utility\FileSystem.hpp" />
     <ClInclude Include="Utility\Input.hpp" />
+    <ClInclude Include="Utility\Murmur3\MurmurHash.h" />
     <ClInclude Include="Utility\stb_image.h" />
     <ClInclude Include="Utility\Timer.hpp" />
     <ClInclude Include="Window.hpp" />
